--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/immutable": "^3.8.7",
     "@types/react-redux": "^7.1.1",
     "@types/react-transition-group": "^4.2.0",
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^4.1.18",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
