--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react-redux": "^7.1.1",
     "@types/react-transition-group": "^4.2.0",
     "@types/redux": "^3.6.0",
+    "@types/redux-immutable": "^4.0.1",
     "@types/styled-components": "^4.1.18",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
@@ -15,6 +16,7 @@
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.2.1",
     "redux": "^4.0.4",
+    "redux-immutable": "^4.0.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
