--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/immutable": "^3.8.7",
     "@types/react-redux": "^7.1.1",
     "@types/react-transition-group": "^4.2.0",
     "@types/redux": "^3.6.0",
     "@types/redux-immutable": "^4.0.1",
+    "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^4.1.18",
+    "axios": "^0.19.0",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.2.1",
     "redux": "^4.0.4",
     "redux-immutable": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
