--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/immutable": "^3.8.7",
+    "@types/react-loadable": "^5.5.1",
     "@types/react-redux": "^7.1.1",
     "@types/react-transition-group": "^4.2.0",
     "@types/redux": "^3.6.0",
@@ -15,6 +16,7 @@
     "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loadable": "^5.5.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
